--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 		<div>
 			<h1><span>Awesome</span> Boilerplate</h1>
 			<p>
-				<label>Jump To Content</label><br>
-				<label>Jump To Footer</label><br>
-				<label>Jump To Kitties</label>
+				<a href="#content">Jump To Content</a><br>
+				<a href="#footer">Jump To Footer</a><br>
+				<a href="http://www.jaguar.de/index.html">Jump To Kitties</a>
 			</p>
 		</div>
 	</header>
 	<main>
 		<section>
-			<article>
+			<article id="content">
 			<!--ToDo Input Fields-->	
 			Input fields belongs here :)
 
@@ -69,7 +69,7 @@
 			</article>
 		</section>
 	</main>
-	<footer>
+	<footer id="footer">
 		<img src="img/nodschool.svg"></a>
 	</footer>
 	<script src="design/index.js"></script>
