bug #2 fixed - wawHighFive

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <title>Awesome Boilerplate</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1 charset=UTF-8">
   <link href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="design/index.css">
 </head>
@@ -70,7 +70,7 @@
 		</section>
 	</main>
 	<footer id="footer">
-		<img src="img/nodschool.svg"></a>
+		<img src="img/nodeschool.svg"></a>
 	</footer>
 	<script src="design/index.js"></script>
 </body>
