Chnaged: index.html, Input fields - daudna

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
 		<section>
 			<article id="content">
 			<!--ToDo Input Fields-->	
-			Input fields belongs here :)
+			Input fields belongs here :) <br/>
+            <br/>
+             Name:<br/> <input type="text"><br/>
+             Vorname:<br/> <input type="text"><br>
+             Email:<br/> <input type="email"><br>
+             Telefonnummer:<br/> <input type="tel"><br>
+             Geburtsdatum:<br/> <input type="date"><br>
+            Studiengang: <br/>
+             <select size="1">
+              <option value="UIB">UIB</option>
+              <option value="IB">IB</option>
+              <option value="IMB">IMB</option>
+             </select>
 
 			</article>
 
@@ -65,7 +77,7 @@
 					Falls du fragen hast, kannst du dich jederzeit an 
 					<a href="https://github.com/CodeKittey">@CodeKittey</a>, wenden oder eine
 					Email schreiben: m.kraus@hs-mannheim.de
-				</p>
+				</p>	
 			</article>
 		</section>
 	</main>
